Fix image lazy loading on mobile

--- a/style.css
+++ b/style.css
@@ -767,7 +767,7 @@ h4 {
 
 @media screen and (max-width: 767px) {
   h1 {
-    font-size: 4.5rem;
+    font-size: 3.5rem;
   }
 
   .nav {
@@ -856,6 +856,10 @@ h4 {
   }
 
   .btn.operations__tab {
-    padding: 1rem 2rem;
+    padding: 1rem;
+  }
+
+  .section--sign-up .btn {
+    padding: 2rem 3rem;
   }
 }
